#15861 closed bug (fixed)
Intel GMA (Q45) black screen after update (regression)
Reported by: | vidrep | Owned by: | PulkoMandy |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Graphics/intel_extreme | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Attachments (2)
Change History (7)
comment:1 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
by , 5 years ago
Attachment: | hrev53962_syslog added |
---|
by , 5 years ago
Attachment: | hrev53971_syslog added |
---|
comment:2 by , 5 years ago
comment:4 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
comment:5 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Please try hrev54034.