intel_extreme: Do not early-enable the pipe on pre-SandyBridge

Should fix #15861.